[tool.poetry]
name = "ylab-step3"
version = "0.1.0"
description = "Y Lab step 3 Homework"
authors = ["Sevenamber <sevenamber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
matplotlib = "^3.5.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.6.0"
flake8-coding = "^1.3.2"
flake8-spellcheck = "^0.24.0"
autopep8 = "^1.5.4"
isort = "^5.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"